--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   "dependencies": {
     "electron-log": "^4.4.0",
     "electron-updater": "^4.3.9",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "vditor": "^3.8.6"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.5",
